# DropLogic

./: .gitignore  LICENSE  README.md  config.json  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml
docs/: api.en.md  api.es.md  configuration.en.md  configuration.es.md  configuration.zh-CN.md  configuration.zh-HK.md  creating_systems.en.md  creating_systems.es.md  creating_systems.zh-CN.md  creating_systems.zh-HK.md  examples.en.md  examples.es.md  getting_started.en.md  getting_started.es.md  getting_started.zh-CN.md  getting_started.zh-HK.md  hardware.en.md  hardware.es.md  hardware.zh-CN.md  hardware.zh-HK.md  index.en.md  index.es.md  index.zh-CN.md  index.zh-HK.md  installation.en.md  installation.es.md  installation.zh-CN.md  installation.zh-HK.md  repository_structure.en.md  repository_structure.es.md  repository_structure.zh-CN.md  repository_structure.zh-HK.md  requirements.txt
docs/mcp/: index.en.md  index.es.md  index.zh-CN.md  index.zh-HK.md
docs/planning/: advanced_drop.en.md  advanced_drop.es.md  advanced_drop.zh-CN.md  advanced_drop.zh-HK.md  index.en.md  index.es.md  index.zh-CN.md  index.zh-HK.md  plan_executor.en.md  plan_executor.es.md  plan_executor.zh-CN.md  plan_executor.zh-HK.md
docs/scripts/: generate_architecture_graph.py
docs/stylesheets/: extra.css
docs/systems/: index.en.md  index.es.md  index.zh-CN.md  index.zh-HK.md  simulator.en.md  simulator.es.md  (+2 more)
droplogic/: __init__.py  base.py
examples/: DMLite_example.py  advanced_usage.py  simulator_example.py
scripts/: generate_advanced_drop_gifs.py  generate_system_gifs.py
(+162 files in other folders)
